# dec2bin

./: .gitignore  README.md  install.sh  meson.build
data/: dec2bin.desktop  resources.gresource.xml
data/ui/: dec2bin.blp
include/: dec2bin.h  keybindings.h  types.h
src/: dec2bin.c  keybindings.c  main.c
